# VulnNote-Manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
docs/: design.md  memo.md  performance.md  plan.md  spec.md  tasks.md  test-plan.md
skills/evidence-summarizer/: SKILL.md
skills/report-export-helper/: SKILL.md
skills/vulnerability-memo-normalizer/: SKILL.md
src/vulnnote_manager/: __init__.py  __main__.py  ai_service.py  config.py  database.py  errors.py  repositories.py  security.py  services.py  storage.py  validation.py
src/vulnnote_manager/presentation/: __init__.py  ai.py  catalog.py  main.py
src/vulnnote_manager/static/css/: app.css
src/vulnnote_manager/static/js/: app.js
src/vulnnote_manager/templates/: _components.html  base.html  bulk_delete_confirm.html  delete_confirm.html  filtered_delete_confirm.html  index.html
src/vulnnote_manager/templates/ai/: note_confirm.html  note_result.html  note_select.html  report_confirm.html  report_result.html  report_select.html
src/vulnnote_manager/templates/errors/: error.html
src/vulnnote_manager/templates/notes/: detail.html  form.html  list.html
src/vulnnote_manager/templates/projects/: detail.html  form.html  list.html
src/vulnnote_manager/templates/screenshots/: delete_confirm.html
src/vulnnote_manager/templates/targets/: detail.html  form.html  list.html
tests/: conftest.py  test_ai.py  test_app.py  test_catalog.py  test_config.py  test_database.py  test_extended_features.py  test_services.py  test_validation_security.py
tools/: measure_performance.py
